--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@popperjs/core": "^2.11.7",
+		"classnames": "^2.3.2",
+		"flowbite": "^1.6.4",
+		"flowbite-svelte": "^0.34.3"
+	}
 }
